<resources>
    <string name="app_name">sampleAuthumClient</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_with_authum">Login With Authum</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_account_yet">Don\'t Have An Account Yet?</string>
    <string name="register">Register</string>
    <string name="first_name_hint">John</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Doe</string>
    <string name="email_hint">example@example.com</string>
    <string name="password_hint">*******</string>
    <string name="re_enter_password">Re enter password</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="log_in_with_authum">Log in With Authum</string>
</resources>
