<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/input_vertical_margin">

        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="First Name"
            android:layout_marginTop="@dimen/input_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="@dimen/input_length"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/first_name_hint"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_alignBottom="@id/first_name"
            android:textSize="@dimen/text_size_small"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/first_name"
            android:text="@string/last_name"
            android:layout_marginTop="@dimen/input_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <EditText
            android:id="@+id/last_name_input"
            android:layout_width="@dimen/input_length"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/last_name_hint"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/text_size_small"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_alignBottom="@id/last_name"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email"
            android:layout_below="@id/last_name"
            android:layout_marginTop="@dimen/input_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="@dimen/input_length"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_size_small"
            android:layout_alignBottom="@+id/email"
            android:layout_alignEnd="@+id/first_name_input"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:text="Register"
            android:textColor="@color/accent_color"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>